--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body{
     background: var(--bg-color);
     color: var(--tect-color);
 }
+hr{
+    color: #fff;
+}
 .header{
     position: fixed;
     top: 0;
@@ -69,8 +72,10 @@ padding: 10rem 9% 2rem;
     justify-content: center;
     align-items: center;
 }
-.home-image{
+.home-image img{
     width: 35vw;
+    border-radius: 50px;
+    
 }
 .home-content h3{
     font-size: 3.2rem;
@@ -133,6 +138,7 @@ box-shadow: none;
 }
 .about-img img{
 width: 35vw;
+border-radius: 50px;
 }
 .heading{
     text-align: center;
@@ -415,5 +421,12 @@ transform: translateY(0);
     }
     .about-img img{
         width: 90vw;
+    }
+    .footer{
+        flex-direction: column-reverse;
+    }
+    .footer p{
+        text-align: center;
+        margin-top: 2rem;
     }
 }
