--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html{
     overflow-x: hidden;
 }
 body{
-    background:url("https://techcrunch.com/wp-content/uploads/2023/05/GettyImages-1325174870.jpg?w=730&crop=1");
+    background-color:#0000b3;
     color: var(--tect-color);
     background-repeat: no-repeat;
     background-size: cover;
