--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html{
     overflow-x: hidden;
 }
 body{
-    background-color:#0000b3;
+    background-color:#47474a;
     color: var(--tect-color);
     background-repeat: no-repeat;
     background-size: cover;
@@ -73,10 +73,14 @@ padding: 10rem 9% 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 .home-image img{
     width: 35vw;
-    border-radius: 50px;
+    border-radius: 50%;
+
+    
+    
     
 }
 .home-content h3{
@@ -382,6 +386,7 @@ transform: translateY(0);
     .home-img img{
         width: 70vw;
         margin-top: 4rem;
+        position: absolute;
     }
     .about{
         flex-direction: column-reverse;
