--- a/css/style.css
+++ b/css/style.css
@@ -69,18 +69,27 @@ section{
 min-height: 100vh;
 padding: 10rem 9% 2rem;
 }
-.home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+section{
+    margin: 20px;
+
 }
+.home{
+    
+    
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+    background:var(--second-bg-color);
+    box-shadow: #0ef;
+    display: inline-flex;
+    
+}
+
+
 .home-image img{
     width: 35vw;
     border-radius: 50%;
 
-    
-    
     
 }
 .home-content h3{
@@ -132,6 +141,20 @@ span{
     font-weight: 600;
     transition: 1s ease;
 }
+button{
+    display: inline-block;
+    padding: 1rem 2rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: 1rem;
+    font-weight: 600;
+    transition: 1s ease;
+    cursor: pointer;
+}
+
 .btn:hover{
 box-shadow: none;
 }
@@ -141,6 +164,9 @@ box-shadow: none;
     gap: 2rem;
     align-items: center;
     background: var(--second-bg-color);
+}
+.about #more{
+    display: none;
 }
 .about-img img{
 width: 35vw;
@@ -200,6 +226,7 @@ border-radius: 50px;
 }
 .portfolio h2{
     margin-bottom: 4rem;
+    
 }
 .portfolio-container{
     display: grid;
@@ -254,8 +281,10 @@ transform: translateY(0);
     align-items: center;
     width: 5rem;
     height: 5rem;
-    background: var(--tect-color);
+    background: red;
     border-radius: 50%;
+    color: black;
+    
 }
 .portfolio-layer a i{
     font-size: 2rem;
@@ -286,9 +315,17 @@ transform: translateY(0);
 }
 .contact form .input-box input{
     width: 49%;
+    height: 30px;
+    padding: 10px;
+    
 }
 .contact form textarea{
     resize: none;
+    height: 100px;
+    padding: 20px;
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
 }
 .contact form .btn{
     margin-top: 2rem;
@@ -387,9 +424,12 @@ transform: translateY(0);
         width: 70vw;
         margin-top: 4rem;
         position: absolute;
+         border-radius: 50%;
+       
     }
     .about{
         flex-direction: column-reverse;
+        display: inline-block;
     }
     .about img{
         width: 70vw;
@@ -419,6 +459,7 @@ transform: translateY(0);
     }
     .contact form .input-box input{
         width: 100%;
+
     }
 }
 
